--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     <img src="dotsgit.png" alt="DOTS Logo">
                 </div>
             </div>
-            <h1 class="site-title">DOTS Software</h1>
+            <h1 class="site-title">DOTS SOFTWARE</h1>
             <p class="site-description">Instant-Easy Access to all DOTS platforms</p>
         </header>
         
@@ -357,12 +357,12 @@
                     </div>
                 </a>
                 
-                <a href="#" class="link-card amazon">
+                <a href="https://www.amazon.com/gp/product/B0DJVN9JF1" class="link-card amazon">
                     <div class="link-content">
-                        <div class="link-icon amazon">📊</div>
+                        <div class="link-icon amazon"><img src="dotsgit.png" alt="DOTS Logo"></div> 
                         <div class="link-details">
-                            <h3 class="link-title">DOTS Analytics</h3>
-                            <p class="link-description">Track metrics and analytics on Amazon devices</p>
+                            <h3 class="link-title">DOTS Client</h3>
+                            <p class="link-description">Streamline your business travel with Dots.</p>
                             <span class="store-badge amazon">Amazon Appstore</span>
                         </div>
                         <div class="link-arrow">→</div>
